# shanks-django

./: .gitignore  CACHING_GUIDE.md  CHANGELOG.md  CHECKLIST.md  CLI_TEST_REPORT.md  COMMIT_MESSAGE_0.2.6.txt  CONTRIBUTING.md  FEATURES_COMPLETE.md  FINAL_STATUS.md  LICENSE  MANIFEST.in  PUBLISH.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_0.2.6.md  SUMMARY.md  example.py  example_advanced.py  example_cors.py  example_database.py  example_swagger.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  shanks_cli.py  test_settings.py
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml  vscode-extension-manual.yml  vscode-extension.yml
SORM/: __init__.py
docs-website/: package-lock.json  package.json
docs-website/app/: globals.css  layout.tsx  page.tsx
docs-website/app/docs/: layout.tsx  page.tsx
docs-website/app/docs/authentication/: page.tsx
docs-website/app/docs/caching/: page.tsx
docs-website/app/docs/cli/: page.tsx
docs-website/app/docs/configuration/: page.tsx
docs-website/app/docs/getting-started/: page.tsx
docs-website/app/docs/installation/: page.tsx
docs-website/app/docs/middleware/: page.tsx
docs-website/app/docs/orm/: page.tsx
docs-website/app/docs/routing/: page.tsx
docs-website/app/docs/swagger/: page.tsx
docs-website/components/: Typography.tsx
example-project/: .env.example  .gitignore  QUICKSTART.md  README.md  requirements.txt  settings.py  urls.py  wsgi.py
example-project/app/: config.py
example-project/app/dto/: __init__.py  comment.py  post.py  user.py
example-project/app/middleware/: __init__.py  auth.py  logger.py
example-project/app/migrations/: 0001_initial.py
example-project/app/models/: __init__.py  category.py  comment.py  like.py  post.py  tag.py
example-project/app/routes/: __init__.py  auth.py  categories.py  comments.py  posts.py  tags.py  users.py
example-project/app/utils/: __init__.py  jwt.py  validators.py
example-project/bruno/: README.md  bruno.json
example-project/bruno/Auth/: Get Me.bru  Login.bru  Register.bru
example-project/bruno/Comments/: Create Comment.bru
example-project/bruno/Posts/: Create Post.bru  Get Post.bru  Like Post.bru  List Posts.bru
example-project/bruno/environments/: Local.bru
shanks/: __init__.py  admin.py  app.py  cache.py  cli.py  config.py  cors.py  db.py  orm.py  request.py  response.py  schema.py  swagger.py  template.py
shanks/cli/: __init__.py  __main__.py  auth.py  auth_complete_templates.py  auth_middleware_template.py  auth_templates.py  banner.py  commands.py  convert.py  crud.py  crud_templates.py  main.py  sorm.py  templates.py
shanks/templates/: landing.html
test_final/finalapp/: .env.example  README.md  manage.py
test_final/finalapp/db/seeds/: example_seed.py
test_final/finalapp/dto/: base_dto.py
test_final/finalapp/finalapp/: asgi.py  settings.py  wsgi.py
test_final/finalapp/internal/: urls.py
test_final/finalapp/internal/controller/: __init__.py  auth_controller.py
test_final/finalapp/internal/middleware/: logger.py
test_final/finalapp/internal/routes/: __init__.py  auth_route.py  health_route.py
test_final/finalapp/internal/views/: __init__.py  home_view.py
test_final/finalapp/templates/: index.html
tests/: test_basic.py  urls.py
vscode-extension/: CHANGELOG.md  HOW_TO_PUBLISH.md  README.md  build.sh  language-configuration.json  package.json
vscode-extension/snippets/: shanks.json
vscode-extension/syntaxes/: shanks.tmLanguage.json
vscode-extension/themes/: shanks-dark.json
