[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shanks-django"
version = "0.1.0"
description = "Express.js-like framework built on Django"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["django", "express", "framework", "web", "api", "rest"]
authors = [
  {name = "Ararya", email = "araryaarch@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
]
dependencies = [
  "django>=3.2"
]

[project.urls]
Homepage = "https://github.com/Ararya/shanks-django"
Documentation = "https://github.com/Ararya/shanks-django#readme"
Repository = "https://github.com/Ararya/shanks-django"
"Bug Tracker" = "https://github.com/Ararya/shanks-django/issues"
